--- a/Project1/css/style.css
+++ b/Project1/css/style.css
@@ -78,6 +78,8 @@
   cursor: pointer;
   }
 
+/* used some code from here for the hamburger lines: https://alvarotrigo.com/blog/hamburger-menu-css/ */
+
   .nav-container .hamburger-lines {
   display: block;
   height: 26px;
@@ -184,109 +186,8 @@ color: var(--secondary);
   color: var(--bckgrnd);
 }
 
-/*all things gallery - menu page: */ 
 
-.overlay {
-  
-  bottom: 0; 
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.5); 
-  color: #f1f1f1; 
-  margin-top: -70px;
-  position: relative;
-  transition: .5s ease;
-  opacity:0;
-  color: white;
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
-  }
-
-
-
-  .container2 {
-   
-    display: inline-block;
-    translate: (-20px, -20px);
-  }
-
-  .container2:hover .overlay {
-    opacity: 1;
-  }
-  
-  .gallery {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(12, 6vw); 
-    grid-gap: 10px;
-  }
-  
-
-  .gallery__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    overflow-y: hidden;
-    border: 3px solid var(--secondary);
-}
-
-.gallery__item--1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-
-.gallery__item--2 {
-  grid-column-start: 3;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-
-.gallery__item--3 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 1;
-  grid-row-end: 7;
-}
-
-
-.gallery__item--4 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 4;
-  grid-row-end: 9; 
-}
-
-.gallery__item--5 {
-  grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 9; 
-  grid-row-end: 14; 
-}
-
-
-.gallery__item--6 {
-  grid-column-start: 5;
-  grid-column-end: 9;
-  grid-row-start: 6;
-  grid-row-end: 10;
-}
-
-* { box-sizing: border-box; }
-
-a {
-  text-decoration: none;
-}
-
-img {
-    border: 1px solid var(--secondary);
-    padding: 3px;
-    box-shadow: 0 0 15px rgba(0,0,0,.1);
-}
-
-/*fooder*/
+/*footer*/
 
 .footer-basic {
   padding:40px 0;
@@ -341,4 +242,4 @@ img {
 }
 
 
-/*https://web-eau.net/en/blog/10-best-footer-html-css-snippets*/
+/*https://web-eau.net/en/blog/10-best-footer-html-css-snippets - used for small hyperlinks at the bottom of the index page, didn't really work so only some of the code is used. */
