--- a/final_portfolio/css/style2.css
+++ b/final_portfolio/css/style2.css
@@ -156,6 +156,38 @@ nav a:hover {
     opacity: 1;
 }
 
+.title, .image {
+    opacity: 0;
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+    transform: translateX(100%);
+}
+
+.title.show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.image.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.title, .image {
+    opacity: 0;
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+    transform: translateX(100%);
+}
+
+.title.show {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.image.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+
 * {
     position: relative;
     box-sizing: border-box;
@@ -168,16 +200,7 @@ nav a:hover {
     width: 100%;
     height: 100%;
     z-index: 50;
-    background: white;
-}
-
-#app {
-    opacity: 1;
-    visibility: visible;
-    z-index: 100;
-    &:hover {
-        opacity: 0.5;
-    }
+    background: rgb(219, 214, 214);
 }
 
 #app {
@@ -187,14 +210,14 @@ nav a:hover {
     padding-bottom: 4vmin;
     height: 90vh;
     width: 100%;
-    background: #ede8e2;
+    background: #e1d2bf;
     color: #3a3535;
 }
 
-body {
+.body {
     display: grid;
     padding: 3vmin;
-    background: #e6ded7;
+    background: #d7cabc;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
@@ -207,88 +230,25 @@ body {
     font-size: 8vw;
     width: 100%;
     z-index: 2;
+    transform: translateX(100%);
 }
 
-@keyframes text-clip {
-    from {
-        clip-path: polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%);
-    }
-    to {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
-}
-
-@keyframes outer-left {
-    from {
-        transform: translateX(50%);
-    }
-    to {
-        transform: none;
-    }
-}
-
-@keyframes inner-left {
-    from {
-        transform: translateX(-50%);
-    }
-    to {
-        transform: none;
-    }
-}
-
-.cafe, .mozart {
-    animation: outer-left 1s 1s cubic-bezier(0.5, 0, 0.1, 1) both;
-}
-
-[class*='inner'] {
-    outline: 1px solid blue;
-}
-
-.title-inner {
-    display: inline-block;
-    animation: inner-left 1s 1s ease both;
-}
-
-.cafe-inner {
-    display: inline-block;
-    animation: inner-left 1s 1s ease both, text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
-}
-
-.mozart-inner {
-    animation: text-clip 1s 0s cubic-bezier(0.5, 0, 0.1, 1) both;
-}
-
-.title {
-    animation: outer-left 1s 1s ease both;
-}
-
-.cafe {
-    > .cafe-inner {
-        display: inline-block;
-    }
-}
-
-.mozart {
-    display: inline-block;
+.title.show {
+    transform: translateX(0);
 }
 
 .image {
     grid-row: 1;
-    grid-column: 3;
-    margin-left: -2rem;
-    opacity: 0.6;
-    animation: image-in 1s cubic-bezier(0.5, 0, 0.1, 1) 2s backwards;
+    grid-column: 2;
+    justify-self: right;
+    height: 100%;
+    padding-right: 4vmin;
+    z-index: 1;
+    transform: translateY(-100%);
 }
 
-@keyframes image-in {
-    from {
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    }
-    to {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
+.image.show {
+    transform: translateY(0);
 }
 
-body:active * {
-    animation: none !important;
-}
+
